@@ -1,9 +1,10 @@
-2006 Q1 Yonah (mobile), Xeon LV: Sossaman (low-power server)
-        Yonah: U1300, U1400
+2006 Q1 Yonah: U1300, U1400
 2006 Q2 Dempsey (Xeon 5000) (like Presler) Tulsa 3.5GHz 16Mb + 2*1Mb (Xeon MP)
 2006 Q3 Conroe: Merom (mobile) Santa Rosa (mobile) Woodcrest (low-power server)
                 Contreau?
-                Merom Viiv: T5600 (single core); T7200, T7400, T7600
+                Merom Viiv: T5500, T5600 (single core?); T7200, T7400, T7600
+                            U7500 (ULV) (all 65nm)
+                               
                 Woodcrest: 5110, 5120, 5130, 5130, 5150, 5160
                 ?: E6300, E6400 (4Mb cache), E6600, E6700 (dual-core 4Mb cache)
                 ?: E4000 (2Mb cache)
